--- a/Computer Science/Assignments/hw2/Makefile
+++ b/Computer Science/Assignments/hw2/Makefile
@@ -2,6 +2,7 @@
 # Makefile for List_linked_list
 #
 CXX = clang++
+#CXX = g++
 FLAGS =  -g -Wall 
 
 cards_linked_list: List_linked_list.cpp List_linked_list.h \
