--- a/Computer Science/Assignments/hw3/Makefile
+++ b/Computer Science/Assignments/hw3/Makefile
@@ -1,8 +1,8 @@
 #
 # Makefile for ISIS Course
 #
-##CXX = clang++
-CXX = g++
+CXX = clang++
+#CXX = g++
 FLAGS =  -g -Wall 
 
 isis_course: IsisCourse.cpp IsisCourse.h \
