I need Halligan Helper...

--- a/Computer Science/Assignments/hw4/Makefile
+++ b/Computer Science/Assignments/hw4/Makefile
@@ -1,7 +1,8 @@
 #
 # Makefile for Binary Search Tree
 #
-CXX = clang++
+CXX = g++
+#CXX = clang++
 FLAGS =  -g -Wall 
 
 bst: BinarySearchTree.cpp BinarySearchTree.h main.cpp pretty_print.cpp
