Holy shit, this took way too much time.

--- a/Computer Science/Assignments/hw6/attempt2/Makefile
+++ b/Computer Science/Assignments/hw6/attempt2/Makefile
@@ -7,7 +7,7 @@ FLAGS = -Wall -g3 -std=c++11
 
 searchtest:
 	#rm searchtest
-	${CXX} ${FLAGS} -o searchtest boyermoore.cpp
+	${CXX} ${FLAGS} -o searchtest searchtest.cpp
 
 songsearch:
 	${CXX} ${FLAGS} -o songsearch main.cpp songsearch.cpp songsearch.h
