GAAAAAAAH THIS IS SO HORRIBLE

--- a/Computer Science/Assignments/hw6/attempt2/Makefile
+++ b/Computer Science/Assignments/hw6/attempt2/Makefile
@@ -5,6 +5,9 @@
 CXX = g++
 FLAGS = -Wall -g3 -std=c++11
 
+unittests:
+	${CXX} ${FLAGS} -o unittests unittests.cpp songsearch.cpp songsearch.h
+
 searchtest:
 	#rm searchtest
 	${CXX} ${FLAGS} -o searchtest searchtest.cpp
